Remove obsolete #if defined(LKM) block.  PR kern/40513