sys/dev/pci/if_lmc.c
@@ -1,4 +1,4 @@
-/* $NetBSD: if_lmc.c,v 1.45 2008/11/12 12:36:12 ad Exp $ */
+/* $NetBSD: if_lmc.c,v 1.46 2009/02/02 15:57:51 tsutsui Exp $ */
 
 /*-
  * Copyright (c) 2002-2006 David Boggs. <boggs@boggs.palo-alto.ca.us>
@@ -142,9 +142,8 @@
 
 #if defined(__NetBSD__)
 # include <sys/cdefs.h>
-__KERNEL_RCSID(0, "$NetBSD: if_lmc.c,v 1.45 2008/11/12 12:36:12 ad Exp $");
+__KERNEL_RCSID(0, "$NetBSD: if_lmc.c,v 1.46 2009/02/02 15:57:51 tsutsui Exp $");
 # include <sys/param.h>	/* OS version */
-/* -DLKM is passed on the compiler command line */
 # include "opt_inet.h"	/* INET6, INET */
 # include "opt_altq_enabled.h" /* ALTQ */
 # include "bpfilter.h"	/* NBPFILTER */
@@ -7201,29 +7200,6 @@ nbsd_detach(struct device *self, int flags)
 
 CFATTACH_DECL(lmc, sizeof(softc_t),		/* lmc_ca */
  nbsd_match, nbsd_attach, nbsd_detach, NULL);
-
-# if defined(LKM)
-
-static struct cfattach *cfattach[] = { &lmc_ca, NULL };
-static const struct cfattachlkminit cfattachs[] =
-  { { DEVICE_NAME, cfattach }, { NULL, NULL } };
-
-static CFDRIVER_DECL(lmc, DV_IFNET, NULL);	/* lmc_cd */
-static struct cfdriver *cfdrivers[] = { &lmc_cd, NULL };
-
-static int pci_locators[] = { -1, 0 }; /* device, function */
-static const struct cfparent pci_parent = { "pci", "pci", DVUNIT_ANY };
-static struct cfdata cfdatas[] =
-  { { DEVICE_NAME, DEVICE_NAME, 0, FSTATE_STAR,
-      pci_locators, 0, &pci_parent },
-    { NULL, NULL, 0, 0, NULL, 0, NULL } };
-
-MOD_DRV("if_"DEVICE_NAME, cfdrivers, cfattachs, cfdatas);
-
-int if_lmc_lkmentry(struct lkm_table *lkmtp, int cmd, int ver)
-  { LKM_DISPATCH(lkmtp, cmd, ver, lkm_nofunc, lkm_nofunc, lkm_nofunc); }
-
-# endif /* LKM */
 
 #endif  /* __NetBSD__ */
 
